update domain and forget password email

--- a/packages/ui/components/avatar/avatar.stories.mdx
+++ b/packages/ui/components/avatar/avatar.stories.mdx
@@ -34,42 +34,42 @@ Avatar group can be composed differently based on the number of user profile.
   <Example title="Small">
     <AvatarGroup size="sm" items={[
   {
-    image: "https://quillsocial.co/stakeholder/peer.jpg",
+    image: "https://quillsocial.com/stakeholder/peer.jpg",
     alt: "Peer",
     title: "Peer Richelsen",
   },
   {
-    image: "https://quillsocial.co/stakeholder/bailey.jpg",
+    image: "https://quillsocial.com/stakeholder/bailey.jpg",
     alt: "Bailey",
     title: "Bailey Pumfleet",
   },
   {
-    image: "https://quillsocial.co/stakeholder/alex-van-andel.jpg",
+    image: "https://quillsocial.com/stakeholder/alex-van-andel.jpg",
     alt: "Alex",
     title: "Alex Van Andel",
   },
   {
-    image: "https://quillsocial.co/stakeholder/ciaran.jpg",
+    image: "https://quillsocial.com/stakeholder/ciaran.jpg",
     alt: "Ciarán",
     title: "Ciarán Hanrahan",
   },
   {
-    image: "https://quillsocial.co/stakeholder/peer.jpg",
+    image: "https://quillsocial.com/stakeholder/peer.jpg",
     alt: "Peer",
     title: "Peer Richelsen",
   },
   {
-    image: "https://quillsocial.co/stakeholder/bailey.jpg",
+    image: "https://quillsocial.com/stakeholder/bailey.jpg",
     alt: "Bailey",
     title: "Bailey Pumfleet",
   },
   {
-    image: "https://quillsocial.co/stakeholder/alex-van-andel.jpg",
+    image: "https://quillsocial.com/stakeholder/alex-van-andel.jpg",
     alt: "Alex",
     title: "Alex Van Andel",
   },
   {
-    image: "https://quillsocial.co/stakeholder/ciaran.jpg",
+    image: "https://quillsocial.com/stakeholder/ciaran.jpg",
     alt: "Ciarán",
     title: "Ciarán Hanrahan",
   },
@@ -78,42 +78,42 @@ Avatar group can be composed differently based on the number of user profile.
 <Example title="large">
     <AvatarGroup size="lg" items={[
   {
-    image: "https://quillsocial.co/stakeholder/peer.jpg",
+    image: "https://quillsocial.com/stakeholder/peer.jpg",
     alt: "Peer",
     title: "Peer Richelsen",
   },
   {
-    image: "https://quillsocial.co/stakeholder/bailey.jpg",
+    image: "https://quillsocial.com/stakeholder/bailey.jpg",
     alt: "Bailey",
     title: "Bailey Pumfleet",
   },
   {
-    image: "https://quillsocial.co/stakeholder/alex-van-andel.jpg",
+    image: "https://quillsocial.com/stakeholder/alex-van-andel.jpg",
     alt: "Alex",
     title: "Alex Van Andel",
   },
   {
-    image: "https://quillsocial.co/stakeholder/ciaran.jpg",
+    image: "https://quillsocial.com/stakeholder/ciaran.jpg",
     alt: "Ciarán",
     title: "Ciarán Hanrahan",
   },
   {
-    image: "https://quillsocial.co/stakeholder/peer.jpg",
+    image: "https://quillsocial.com/stakeholder/peer.jpg",
     alt: "Peer",
     title: "Peer Richelsen",
   },
   {
-    image: "https://quillsocial.co/stakeholder/bailey.jpg",
+    image: "https://quillsocial.com/stakeholder/bailey.jpg",
     alt: "Bailey",
     title: "Bailey Pumfleet",
   },
   {
-    image: "https://quillsocial.co/stakeholder/alex-van-andel.jpg",
+    image: "https://quillsocial.com/stakeholder/alex-van-andel.jpg",
     alt: "Alex",
     title: "Alex Van Andel",
   },
   {
-    image: "https://quillsocial.co/stakeholder/ciaran.jpg",
+    image: "https://quillsocial.com/stakeholder/ciaran.jpg",
     alt: "Ciarán",
     title: "Ciarán Hanrahan",
   },
