--- a/packages/ui/components/card/card.stories.mdx
+++ b/packages/ui/components/card/card.stories.mdx
@@ -14,10 +14,10 @@ All Cards used in Access
 export const tip = {
     id: 1,
     thumbnailUrl: "https://img.youtube.com/vi/60HJt8DOVNo/0.jpg",
-    mediaLink: "https://go.quillsocial.co/dynamic-video",
+    mediaLink: "https://go.quillsocial.com/dynamic-video",
     title: "Dynamic booking links",
     description: "Booking link that allows people to quickly schedule meetings.",
-    href: "https://quillsocial.co/blog/quill-v-1-9",
+    href: "https://quillsocial.com/blog/quill-v-1-9",
 }
 
 
